--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 body {
-  margin: 0;
+  /*margin: 0;
+  padding: 0;*/
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  font-size: 15px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(90deg, #03001C, #301E67);
 }
 
 code {
